--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -43,3 +43,19 @@ body {
 img {
   @apply border-solid border-2 border-green-300 m-5 p-2;
 }
+
+h1.title {
+  @apply text-2xl font-bold m-0 p-5 text-white bg-blue-800 text-center;
+}
+
+p.msg {
+  @apply text-lg m-5 text-gray-900;
+}
+
+ul,
+ol {
+  @apply text-xl m-5 font-bold list-disc;
+}
+li {
+  @apply mx-10 font-normal text-blue-700;
+}
